[package]
name = "parser-cli"
version = "0.1.0"
authors = ["msakuta <masahiro.sakuta@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parser = { path = "../parser" }
clap = { version = "3.2.17", features = ["derive"] }


