[package]
name = "mascal-cli"
version = "0.1.0"
authors = ["msakuta <masahiro.sakuta@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mascal = { path = "../parser" }
clap = { version = "3.2.22", features = ["derive"] }
colored = "2.0.0"


