[package]
name = "parser"
version = "0.1.0"
authors = ["msakuta <masahiro.sakuta@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nom = "7.1.1"
nom_locate = "4.0.0"


